--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "hatchling.build"
 name = "graph_alexkimoni"
 version = "0.0.1"
 authors = [
-  { name="Alex Kimoni", email="alexkimoni@msudenver.edu" },
+  { name="Alex Kimoni", email="mkimoni@msudenver.edu" },
 ]
 description = "A small example package"
 readme = "README.md"
@@ -21,5 +21,4 @@ classifiers = [
 packages = ["src"]
 
 [project.urls]
-"Homepage" = "https://github.com/pypa/sampleproject"
-"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
+"Homepage" = "https://github.com/alexkimoni/dijkstra.git"
