--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "graph_alexkimoni"
+name = "graph_mkimoni"
 version = "0.0.1"
 authors = [
   { name="Alex Kimoni", email="mkimoni@msudenver.edu" },
